# anki-skill

./: CLAUDE.md  README.md  SKILL.md  main.py  pyproject.toml
scripts/: create_deck.py  parse_deck.py
