[project]
name = "ankiskill"
version = "0.1.0"
description = "Create, parse, and edit Anki flashcard decks (.apkg files)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "genanki>=0.13.1",
]

[project.scripts]
create-deck = "scripts.create_deck:main"
parse-deck = "scripts.parse_deck:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
]

[tool.setuptools]
packages = ["scripts"]
